FEAT: Implemented responsive landing page with GitHub-themed design

--- a/ui/index.html
+++ b/ui/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/green-square-favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vite-project</title>
+    <meta name="description" content="Keep your GitHub contribution streak alive with GreenSquare - the gamified productivity app for developers. Smart reminders, streak tracking, and motivation tools." />
+    <meta name="keywords" content="GitHub, contribution streak, productivity, gamification, coding habits, developer tools" />
+    <meta property="og:title" content="GreenSquare - Keep Your GitHub Streak Alive" />
+    <meta property="og:description" content="Turn productivity into a game. Never break your contribution streak again with smart reminders, streak tracking, and gamified coding habits." />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="GreenSquare - Keep Your GitHub Streak Alive" />
+    <meta name="twitter:description" content="Turn productivity into a game. Never break your contribution streak again with smart reminders, streak tracking, and gamified coding habits." />
+    <title>GreenSquare - Keep Your GitHub Streak Alive 🟩</title>
   </head>
   <body>
     <div id="root"></div>
