feat: enable dark mode and update GitHub color palette in Tailwind config
- Set darkMode to 'class' for better theme management.
- Refactor GitHub color definitions to use CSS variables for dynamic theming.
- Update green color shades for improved consistency.
- Simplify font family declaration for GitHub styling.

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,5 +17,15 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+      (function () {
+        try {
+          const stored = localStorage.getItem('theme');
+          const systemDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+          const theme = stored || (systemDark ? 'dark' : 'light');
+          if (theme === 'dark') document.documentElement.classList.add('dark');
+        } catch { }
+      })();
+    </script>
   </body>
 </html>
